[gd_scene load_steps=5 format=3 uid="uid://0458jylbf5qd"]

[ext_resource type="PackedScene" uid="uid://dp7fxb1kkrl7r" path="res://opps/opps_dallas.tscn" id="1_v08r7"]
[ext_resource type="Script" path="res://opps/enemydallas.gd" id="2_156o2"]
[ext_resource type="Texture2D" uid="uid://b84iiejjntju2" path="res://opps/enemydallas.png" id="2_m4uvk"]

[sub_resource type="SpriteFrames" id="SpriteFrames_33pwh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_m4uvk")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="EnemyDallas" instance=ExtResource("1_v08r7")]
script = ExtResource("2_156o2")

[node name="AnimatedSprite2D" parent="." index="0"]
rotation = 3.14159
scale = Vector2(0.75, 0.75)
sprite_frames = SubResource("SpriteFrames_33pwh")

[node name="StatsComponent" parent="." index="1"]
health = 3

[node name="MoveComponent" parent="." index="2"]
velocity = Vector2(2.08165e-12, 200)

[node name="VisibleOnScreenNotifier2D" parent="." index="3"]
position = Vector2(-5.24521e-06, 0.500003)
scale = Vector2(3.8, 3.75)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HurtboxComponent" index="0"]
polygon = PackedVector2Array(-13, -13, -13, -22, -23, -31, -23, -37, 24, -37, 24, -31, 14, -22, 14, -13, 37, -19, 37, -14, 12, 12, 1, 37, -12, 12, -36, -13, -36, -19)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HitboxComponent" index="0"]
polygon = PackedVector2Array(-11, 11, 1, 33, 11, 11, 36, -15, 36, -18, 13, -12, 13, -22, 23, -32, 23, -36, -22, -36, -22, -32, -12, -22, -12, -12, -35, -18, -35, -13)

[node name="DestroyedComponent" parent="." index="8" node_paths=PackedStringArray("actor", "stats_component")]
actor = NodePath("..")
stats_component = NodePath("../StatsComponent")

[node name="CrystalSpawnerTimer" parent="." index="10"]
one_shot = false
autostart = false
